[project]
name = "blackjack"
version = "0.0.0"
description = "Blackjack simulations"
authors = [
    {name = "Broderick Turner", email = "broderickturner92@gmail.com"},
]
dependencies = [
    "tqdm~=4.66",
    "ruff~=0.5",
    "pydantic~=2.8",
    "emoji~=2.12",
]
requires-python = "~=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "D", "FA102", "PTH", "FBT001", "FIX", "ERA"]
ignore = [
    "D100", # missing docstring in public module
    "D101", # missing docstring in public class
    "D102", # missing docstring in public method
    "D103", # missing docstring in public function
    "D104", # missing docstring in public package
    "D105", # missing docstring in magic method
    "D107", # missing docstring in __init__
    "D203", # one blank line before class
    "D213", # multi line summary second line
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []