[project]
name = "blackjack"
dynamic = ["version"]
description = "Blackjack simulations"
authors = [
    {name = "Broderick Turner", email = "broderickturner92@gmail.com"},
]
dependencies = [
    "emoji~=2.14",
    "tqdm~=4.67",
    "pydantic~=2.11",
    "typer>=0.15.2",
]
requires-python = "~=3.12"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "ruff~=0.11",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "PTH",  # flake8-use-pathlib
    "FBT",  # flake8-boolean-trap
    "A",  # flake8-builtins
    "C4",  # flake8-comprehension
    "DTZ",  # flake8-datetimez
    "RET",  # flake8-return
    "PTH",  # flake8-use-pathlib
    "ASYNC",  # flake8-async
    "FA102",  # flake8-future-annotations
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
